# koe

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: project-brief.md
src/koe/: audio.py  config.py  hotkey.py  insert.py  main.py  notify.py  transcribe.py  types.py  usage_log.py  window.py
tests/: section1_static_fixtures.py  section2_static_fixtures.py  section3_static_fixtures.py  section4_static_fixtures.py  section5_static_fixtures.py  section6_static_fixtures.py  section8_static_fixtures.py  test_audio.py  test_config.py  test_hotkey.py  test_insert.py  test_integration_terminal_flow.py  test_main.py  test_notify.py  test_readme.py  test_transcribe.py  test_types.py  test_usage_log.py  test_window.py
thoughts/design/: 2026-02-20-koe-m1-section-1-api-design.md  2026-02-20-koe-m1-section-2-api-design.md  2026-02-20-koe-m1-section-3-api-design.md  2026-02-20-koe-m1-section-5-api-design.md  2026-02-20-koe-m1-section-7-api-design.md  2026-02-20-koe-m1-section-8-api-design.md  2026-02-20-section-4-transcription-api.md  2026-02-20-section-6-notify-exit-semantics.md  2026-02-20-section-7-delivery-gates.md
thoughts/handoffs/: 2026-02-20_21-19-39_wayland-runtime-hardening-and-validation.md
thoughts/plans/: 2026-02-20-koe-m1-section-1-foundations-plan.md  2026-02-20-koe-m1-section-2-invocation-focus-guard-plan.md  2026-02-20-koe-m1-section-3-audio-capture-artifact-lifecycle-plan.md  2026-02-20-koe-m1-section-4-local-cuda-transcription-plan.md  2026-02-20-koe-m1-section-5-insertion-clipboard-safety-plan.md  (+3 more)
thoughts/specs/: 2026-02-20-koe-m1-spec.md
(+30 files in other folders)
